[package]
name = "thawing"
description = "Experimental hot-reloading for iced through the WebAssembly Component Model"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
wasmtime.workspace = true
serde.workspace = true
bincode.workspace = true
tracing.workspace = true
notify-debouncer-mini.workspace = true
iced_core.workspace = true
iced_futures.workspace = true
iced_runtime.workspace = true
iced_widget.workspace = true

[workspace]
members = ["guest", "examples/*"]

[workspace.package]
version = "0.1.0-dev"
authors = ["Richard Custodio <richardcustodio@pm.me>"]
edition = "2024"
license = "MIT"

[workspace.dependencies]
thawing = { version = "0.1.0-dev", path = "." }
thawing_guest = { version = "0.1.0-dev", path = "guest" }
wasmtime = "29.0"
serde = { version = "1.0", features = ["derive", "rc"] }
bincode = "1.3"
tracing = "0.1"
notify-debouncer-mini = "0.6"
iced = { version = "0.14.0-dev", git = "https://github.com/derezzedex/iced.git", rev = "f9e2118030c31f5de537bb173920e40149d6f75f" }
iced_core = { version = "0.14.0-dev", git = "https://github.com/derezzedex/iced.git", rev = "f9e2118030c31f5de537bb173920e40149d6f75f" }
iced_futures = { version = "0.14.0-dev", git = "https://github.com/derezzedex/iced.git", rev = "f9e2118030c31f5de537bb173920e40149d6f75f" }
iced_runtime = { version = "0.14.0-dev", git = "https://github.com/derezzedex/iced.git", rev = "f9e2118030c31f5de537bb173920e40149d6f75f" }
iced_widget = { version = "0.14.0-dev", git = "https://github.com/derezzedex/iced.git", rev = "f9e2118030c31f5de537bb173920e40149d6f75f" }
