[package]
name = "thawing"
description = "Experimental hot-reloading for iced through the WebAssembly Component Model"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
wasmtime.workspace = true
serde.workspace = true
bincode.workspace = true
tracing.workspace = true
tempfile.workspace = true
proc-macro2.workspace = true
syn.workspace = true
quote.workspace = true
prettyplease.workspace = true
notify-debouncer-mini.workspace = true
tokio.workspace = true
iced_core.workspace = true
iced_futures.workspace = true
iced_runtime.workspace = true
iced_widget.workspace = true

[workspace]
members = ["guest", "examples/*"]

[workspace.package]
version = "0.1.0-dev"
authors = ["Richard Custodio <richardcustodio@pm.me>"]
edition = "2024"
license = "MIT"

[workspace.dependencies]
thawing = { version = "0.1.0-dev", path = "." }
thawing_guest = { version = "0.1.0-dev", path = "guest" }
wasmtime = "29.0"
serde = { version = "1.0", features = ["derive", "rc"] }
bincode = "1.3"
tracing = "0.1"
tempfile = "3.19"
proc-macro2 = "1.0"
syn = { version = "2.0", features = ["full", "printing", "visit"] }
quote = "1.0"
prettyplease = "0.2"
notify-debouncer-mini = "0.6"
tokio = { version = "1.44", features = ["process", "fs", "io-util", "net", "rt", "sync"] }
iced = { version = "0.14.0-dev", git = "https://github.com/derezzedex/iced.git", rev = "f9e2118030c31f5de537bb173920e40149d6f75f" }
iced_core = { version = "0.14.0-dev", git = "https://github.com/derezzedex/iced.git", rev = "f9e2118030c31f5de537bb173920e40149d6f75f" }
iced_futures = { version = "0.14.0-dev", git = "https://github.com/derezzedex/iced.git", rev = "f9e2118030c31f5de537bb173920e40149d6f75f" }
iced_runtime = { version = "0.14.0-dev", git = "https://github.com/derezzedex/iced.git", rev = "f9e2118030c31f5de537bb173920e40149d6f75f" }
iced_widget = { version = "0.14.0-dev", git = "https://github.com/derezzedex/iced.git", rev = "f9e2118030c31f5de537bb173920e40149d6f75f" }
