[package]
name = "thawing"
description = "Experimental hot-reloading for iced through the WebAssembly Component Model"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
wasmtime.workspace = true
serde.workspace = true
bincode.workspace = true
tracing.workspace = true
tempfile.workspace = true
proc-macro2.workspace = true
syn.workspace = true
quote.workspace = true
prettyplease.workspace = true
notify-debouncer-mini.workspace = true
thiserror.workspace = true
iced_core.workspace = true
iced_widget.workspace = true
thawing_macro.workspace = true

[workspace]
members = ["guest", "macro", "examples/*"]

[workspace.package]
version = "0.1.0-dev"
authors = ["Richard Custodio <richardcustodio@pm.me>"]
edition = "2024"
license = "MIT"

[workspace.dependencies]
thawing = { version = "0.1.0-dev", path = "." }
thawing_guest = { version = "0.1.0-dev", path = "guest" }
thawing_macro = { version = "0.1.0-dev", path = "macro" }
wasmtime = "32.0"
serde = { version = "1.0", features = ["derive", "rc"] }
bincode = "1.3"
tracing = "0.1"
tempfile = "3.19"
thiserror = "2.0"
proc-macro2 = "1.0"
syn = { version = "2.0", features = ["full", "printing", "visit"] }
quote = "1.0"
prettyplease = "0.2"
notify-debouncer-mini = "0.6"
iced = { version = "0.14.0-dev", git = "https://github.com/derezzedex/iced.git", rev = "345bbccff5e4864e70eca8c702964cfe30efc738" }
iced_core = { version = "0.14.0-dev", git = "https://github.com/derezzedex/iced.git", rev = "345bbccff5e4864e70eca8c702964cfe30efc738", features = ["serde"] }
iced_futures = { version = "0.14.0-dev", git = "https://github.com/derezzedex/iced.git", rev = "345bbccff5e4864e70eca8c702964cfe30efc738" }
iced_runtime = { version = "0.14.0-dev", git = "https://github.com/derezzedex/iced.git", rev = "345bbccff5e4864e70eca8c702964cfe30efc738" }
iced_widget = { version = "0.14.0-dev", git = "https://github.com/derezzedex/iced.git", rev = "345bbccff5e4864e70eca8c702964cfe30efc738" }
