[package]
name = "thawing_example"
version = "0.1.0"
edition = "2024"

[dependencies]
thawing = { path = "../core" }
serde = { version = "1.0", features = ["derive"] }

[lib]
crate-type = ["cdylib"]

[profile.release]
codegen-units = 1
opt-level = "s"
debug = false
strip = true
lto = true

[package.metadata.component]
package = "thawing:app"

[package.metadata.component.dependencies]
