[package]
name = "thawing_guest"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
wit-bindgen-rt = "0.41.0"
bincode.workspace = true
serde.workspace = true

[package.metadata.component]
package = "thawing:core"
target = { path = "../wit" }
bindings = { pub_export_macro = true }
